--- a/storage-schemas.conf
+++ b/storage-schemas.conf
@@ -1,7 +1,8 @@
 [carbon]
-pattern = ^carbon\..*
-retentions = 1m:31d,10m:1y,1h:5y
+pattern = ^carbon\.
+retentions = 60:90d
 
-[default]
+[default_1min_for_1day]
 pattern = .*
-retentions = 10s:8d,1m:31d,10m:1y,1h:5y
+retentions = 5m:31d
+
